// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroupField /> renders the component with no control icon and no a11y violations 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: -12px;
  margin-left: -12px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-right: 12px;
  padding-left: 12px;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c7 {
  display: block;
  margin: 0 0 10px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2C3236;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 16px;
}

.c5 {
  max-width: 100%;
  width: 100%;
}

.c8 {
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
  font-weight: 400;
  font-size: 16px;
  padding: 14px 16px;
  border: 1px solid #818F9B;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  border-radius: 8px;
  line-height: 1.4;
  color: #2C3236;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-bottom: 0;
}

.c8:before {
  content: '';
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #FFFFFF;
  border-radius: 4px;
  height: 20px;
  width: 20px;
  margin-right: 8px;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  box-shadow: 0 0 4px 0 transparent;
  border: 1px #818F9B solid;
  display: block;
}

.c8:after {
  content: '';
  background-size: contain;
  background: transparent none no-repeat center;
  height: 12px;
  width: 12px;
  position: absolute;
  left: 20px;
  top: 18px;
}

.c8:hover {
  cursor: pointer;
}

.c6 {
  left: -100%;
  opacity: 0;
  z-index: -1;
  position: absolute;
}

.c6:hover:not(:disabled) + label,
.c6:focus + label {
  border-color: #009E8E;
  box-shadow: 0 0 4px 0 #009E8E;
}

.c6:hover:not(:disabled) + label:before,
.c6:focus + label:before {
  border-color: #009E8E;
  box-shadow: 0 0 4px 0 #009E8E;
}

.c6:hover:checked:not(:disabled) + label:after,
.c6:focus:checked + label:after {
  background-image: url(teal-check-mark.svg);
}

.c6:disabled + label {
  cursor: not-allowed;
  color: #818F9B;
  background-color: #F7F7F7;
}

.c6:disabled:not(:checked) + label {
  border-color: #D4D7D9;
}

.c6:disabled:not(:checked) + label:before {
  border-color: #D4D7D9;
}

.c6:checked + label {
  border-color: #009E8E;
  background-color: #ECFCF9;
  box-shadow: none;
}

.c6:checked + label:before {
  border-color: #009E8E;
  box-shadow: none;
}

.c6:checked + label:after {
  background-size: contain;
  background-image: url(teal-check-mark.svg);
  -webkit-animation: guYtTV 180ms ease-in-out;
  animation: guYtTV 180ms ease-in-out;
}

.c6 + label:before,
.c6 + label:after {
  display: none;
}

.c0 {
  border: 0;
  padding: 0.01em 0 0 0;
  margin: 0;
  min-width: 0;
}

.c1 {
  padding: 0;
  display: table;
  margin-bottom: 8px;
  font-weight: 600;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.c4 {
  padding: 4px 0;
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  >
    label
  </legend>
  <div
    class="c2"
    cols="12"
    direction="row"
  >
    <div
      class="c3"
      cols="12"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <input
            class="c6"
            id="checkbox-id-option"
            name="option"
            type="checkbox"
          />
          <label
            class="c7 c8"
            for="checkbox-id-option"
          >
            option
          </label>
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`<CheckboxGroupField /> renders the component with props with no a11y violations 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: -12px;
  margin-left: -12px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-right: 12px;
  padding-left: 12px;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

.c7 {
  display: block;
  margin: 0 0 10px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2C3236;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 16px;
}

.c5 {
  max-width: 100%;
  width: 100%;
}

.c8 {
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
  font-weight: 400;
  font-size: 16px;
  padding: 14px 16px;
  border: 1px solid #818F9B;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  border-radius: 8px;
  line-height: 1.4;
  color: #2C3236;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-bottom: 0;
}

.c8:before {
  content: '';
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #FFFFFF;
  border-radius: 4px;
  height: 20px;
  width: 20px;
  margin-right: 8px;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  box-shadow: 0 0 4px 0 transparent;
  border: 1px #818F9B solid;
  display: block;
}

.c8:after {
  content: '';
  background-size: contain;
  background: transparent none no-repeat center;
  height: 12px;
  width: 12px;
  position: absolute;
  left: 20px;
  top: 18px;
}

.c8:hover {
  cursor: pointer;
}

.c6 {
  left: -100%;
  opacity: 0;
  z-index: -1;
  position: absolute;
}

.c6:hover:not(:disabled) + label,
.c6:focus + label {
  border-color: #009E8E;
  box-shadow: 0 0 4px 0 #009E8E;
}

.c6:hover:not(:disabled) + label:before,
.c6:focus + label:before {
  border-color: #009E8E;
  box-shadow: 0 0 4px 0 #009E8E;
}

.c6:hover:checked:not(:disabled) + label:after,
.c6:focus:checked + label:after {
  background-image: url(teal-check-mark.svg);
}

.c6:disabled + label {
  cursor: not-allowed;
  color: #818F9B;
  background-color: #F7F7F7;
}

.c6:disabled:not(:checked) + label {
  border-color: #D4D7D9;
}

.c6:disabled:not(:checked) + label:before {
  border-color: #D4D7D9;
}

.c6:checked + label {
  border-color: #009E8E;
  background-color: #ECFCF9;
  box-shadow: none;
}

.c6:checked + label:before {
  border-color: #009E8E;
  box-shadow: none;
}

.c6:checked + label:after {
  background-size: contain;
  background-image: url(teal-check-mark.svg);
  -webkit-animation: guYtTV 180ms ease-in-out;
  animation: guYtTV 180ms ease-in-out;
}

.c0 {
  border: 0;
  padding: 0.01em 0 0 0;
  margin: 0;
  min-width: 0;
}

.c1 {
  padding: 0;
  display: table;
  margin-bottom: 8px;
  font-weight: 600;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.c4 {
  padding: 4px 0;
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  >
    label
  </legend>
  <div
    class="c2"
    cols="12"
    direction="row"
  >
    <div
      class="c3"
      cols="12"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <input
            class="c6"
            data-automation="ZA.test-0"
            id="checkbox-id-option"
            name="option"
            type="checkbox"
          />
          <label
            class="c7 c8"
            for="checkbox-id-option"
          >
            option
          </label>
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;
